--- a/client/src/app.css
+++ b/client/src/app.css
@@ -156,7 +156,7 @@ button{
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    margin: 2px;
+    margin-top: 10px;
 }
 
 .save-button{
@@ -513,7 +513,9 @@ button{
         gap: 5px;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(3, 1fr);
-        margin: 2px;
+        margin-top: 10px;
+        margin-left: 3px;
+        margin-right: 3px;
         width: auto;
     }
     
