--- a/client/src/app.css
+++ b/client/src/app.css
@@ -53,6 +53,7 @@ button{
     -webkit-box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
     -moz-box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
     border: none;
+    margin-top: 15px;
 }
 
 
@@ -132,7 +133,9 @@ button{
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     border-radius: 10px;
-    margin: 5px;
+    margin-top: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
     background: rgb(183, 219, 251);
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -168,7 +171,7 @@ button{
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    margin-top: 10px;
+    margin-top: 18px;
     margin-left: 5px;
     margin-right: 5px;
 }
