adjust save button position

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -179,7 +179,7 @@ button{
 .save-button{
     grid-row: 3/4;
     grid-column: 6/7;
-    width: auto;
+    width: 90%;
     height: 100px;
     font-size: 20px;
     border: none;
