--- a/client/src/app.css
+++ b/client/src/app.css
@@ -454,11 +454,14 @@ button{
     .delete-button{
         height: 50px;
         font-size: 20px;
-        width: fit-content;
+        width: 70%;
         background: rgb(199, 57, 57);
         grid-column: 4/5;
         grid-row: 3/4;
-        margin: auto;
+        margin-top: 50%;
+        margin-left: 20%;
+        margin-bottom: 50%;
+        margin-right: 60%;
         border: none;
         box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
     -webkit-box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
