adjust title margin - mobile

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -403,15 +403,15 @@ button{
 /* ******************************************************************************************** */
 /* ******************************************************************************************** */
 /* ******************************************************************************************** */
+/* ******************************************************************************************* */
 /* ******************************************************************************************** */
-/* ******************************************************************************************** */
-/* ******************************************************************************************** */
-/* ******************************************************************************************** */
-/* ******************************************************************************************** */
-/* ******************************************************************************************** */
-/* ******************************************************************************************** */
-/* ******************************************************************************************** */
-/* ******************************************************************************************** */
+/* *******         ************  *  ************         ********************************************** */
+/* *******  ******  **********  ****  **********  ******************************************************* */
+/* *******  ******  *********  ******  *********  ******************************************************* */
+/* *******  *     **********           *********       ********************************************* */
+/* *******  ******  *******  ********  *********  ******************************************************* */
+/* *******  ******  ******  *********  *********  ******************************************************* */
+/* *******         ******  ***********  ********          ***************************************************** */
 /* ******************************************************************************************** */
 /* ******************************************************************************************** */
 /* ******************************************************************************************** */
@@ -527,7 +527,7 @@ button{
         height: 30px;
         font-size: 40px;
         padding: 15%;
-        margin-top: 0;
+
     }
 
 
