--- a/client/src/app.css
+++ b/client/src/app.css
@@ -527,7 +527,7 @@ button{
         height: 30px;
         font-size: 40px;
         padding: 15%;
-
+        margin-top: 0;
     }
 
 
@@ -802,5 +802,48 @@ button{
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .modal--container{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        text-align: center;
+        align-items: center;
+        font-size: 10px;
+        background-image: url('../images/map.jpg');
+        width: 90%;
+        height: 200px;
+        padding-bottom: 10px;
+        border-radius: 10px;
+        box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
+        -webkit-box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
+        -moz-box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
+        position: absolute;
+        top: 110%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .modal--button{
+        height: 40px;
+        width: 50%;
+        margin: auto;
+        border: none;
+        font-size: 18px;
+        box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
+        -webkit-box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
+        -moz-box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
+    }
+    .modal--text{
+        margin-top: 10%;
+        text-transform:uppercase;
+        background-color: rgba(180, 180, 217, 0.692);
+        border-radius: 10px;
+        padding: 5px;
+    }
+
+    .modal--pointer{
+        width:40px;
+        border-radius: 50%;
     }
 }
