changed modal position to "fixed'

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -372,8 +372,8 @@ button{
     box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
     -webkit-box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
     -moz-box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
-    position: absolute;
-    top: 100%;
+    position: fixed;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -868,8 +868,8 @@ button{
         box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
         -webkit-box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
         -moz-box-shadow: 1px 5px 9px 1px rgba(0,0,0,0.75);
-        position: absolute;
-        top: 110%;
+        position: fixed;
+        top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
     }
