--- a/client/src/app.css
+++ b/client/src/app.css
@@ -404,6 +404,26 @@ button{
     border-radius: 50%;
     margin-top: 5px;
 }
+
+.delete--modal-container{
+    background-color: aliceblue;
+    border: solid blue 2px;
+    border-radius: 10px;
+    width: 30%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.delete--modal-button{
+    font-size: 30px;
+}
 }
 /* ******************************************************************************************** */
 /* ******************************************************************************************** */
@@ -895,5 +915,30 @@ button{
         width:40px;
         border-radius: 50%;
         margin-top: 2px;
+    }
+
+    .delete--modal-container{
+        background-color: aliceblue;
+        border: solid blue 2px;
+        border-radius: 10px;
+        width: 50%;
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        text-align: center;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .delete--modal-container h1 {
+        font-size: 30px;
+    }
+    
+    .delete--modal-button{
+        font-size: 30px;
     }
 }
