--- a/client/src/app.css
+++ b/client/src/app.css
@@ -28,6 +28,7 @@ button{
     height: 200px;
     align-items: center;
     justify-content: center;
+    text-align: center;
     margin: auto;
     margin-top: 10%;
     background: rgba(227, 226, 226, 0.531);
